# visitas-virtuales-api/openapi.json
@@ -21,14 +21,34 @@
   "paths": {
     "/api/v1/centers": {
       "get": {
-        "summary": "Obtener listado de todos los centros disponibles",
-        "description": "Esta ruta permite a los usuarios obtener una lista de todos los centros disponibles en el sistema",
+        "summary": "Obtener listado de todos los centros disponibles con paginación opcional",
+        "description": "Esta ruta permite a los usuarios obtener una lista de los centros disponibles en el sistema",
         "tags": [
           "Centros"
         ],
         "security": [
           {
             "bearerAuth": []
+          }
+        ],
+        "parameters": [
+          {
+            "in": "query",
+            "name": "limit",
+            "schema": {
+              "type": "integer",
+              "example": 10
+            },
+            "description": "Número máximo de centros a devolver (opcional, por defecto 10)"
+          },
+          {
+            "in": "query",
+            "name": "lastId",
+            "schema": {
+              "type": "integer",
+              "example": 20
+            },
+            "description": "ID del último centro recibido en la página anterior para paginación (opcional)"
           }
         ],
         "responses": {
